<resources>
    <string name="app_name">Weather-app</string>
    <string name="denied">Отказано</string>
    <string name="turn_on_location">Включите геолокацию</string>
    <string name="null_received">Получен Null</string>
    <string name="temperature">%s°C</string>
    <string name="wind">Ветер</string>
    <string name="humidity">Влажность</string>
    <string name="visibility">Видимость</string>
    <string name="param_wind">%s м/с</string>
    <string name="param_humidity">%s%%</string>
    <string name="param_visibility">%s км</string>
    <string name="hourly_forecast">Почасовой прогноз</string>
    <string name="daily_forecast">Ежедневный прогноз</string>
</resources>