<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".presentation.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/pbLoadWeather"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/errorScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCurrentTypeWeather"
                style="@style/style_current_img"
                android:src="@drawable/icon_cloud"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvCurrentTypeWeather"
                style="@style/style_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_type_weather_text"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@+id/imgCurrentTypeWeather"
                app:layout_constraintStart_toStartOf="@+id/imgCurrentTypeWeather"
                app:layout_constraintTop_toBottomOf="@+id/imgCurrentTypeWeather"
                tools:text="Пасмурно" />

            <TextView
                android:id="@+id/tvCurrentTemp"
                style="@style/style_current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_current_temp"
                app:layout_constraintEnd_toEndOf="@+id/tvCurrentTypeWeather"
                app:layout_constraintStart_toStartOf="@+id/tvCurrentTypeWeather"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentTypeWeather"
                tools:text="@string/temperature" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvParamCurrentWeather"
                style="@style/BaseCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvTitleWind"
                        style="@style/style_title_card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        app:layout_constraintBottom_toTopOf="@+id/tvParamWind"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tvTitleHumidity"
                        style="@style/style_title_card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        app:layout_constraintBottom_toTopOf="@+id/tvParamHumidity"
                        app:layout_constraintEnd_toStartOf="@+id/tvTitleVisibility"
                        app:layout_constraintStart_toEndOf="@+id/tvTitleWind"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tvTitleVisibility"
                        style="@style/style_title_card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        app:layout_constraintBottom_toTopOf="@+id/tvParamVisibility"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tvParamWind"
                        style="@style/style_param_text_card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitleWind"
                        tools:text="@string/param_wind" />

                    <TextView
                        android:id="@+id/tvParamHumidity"
                        style="@style/style_param_text_card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvTitleHumidity"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitleHumidity"
                        tools:text="@string/param_humidity" />

                    <TextView
                        android:id="@+id/tvParamVisibility"
                        style="@style/style_param_text_card_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvTitleVisibility"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitleVisibility"
                        tools:text="@string/param_visibility" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</androidx.core.widget.NestedScrollView>
